--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==20.8b1
 click==7.1.2
 coverage==5.3
 mypy-extensions==0.4.3
+numpy==1.19.4
 parameterized==0.7.4
 pathspec==0.8.1
 regex==2020.11.13
