--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,33 @@
 appdirs==1.4.4
 black==20.8b1
+bleach==3.2.1
+certifi==2020.12.5
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.4
 coverage==5.3
+docutils==0.16
+idna==2.10
+keyring==21.5.0
 mypy-extensions==0.4.3
 numpy==1.19.4
+packaging==20.8
 parameterized==0.7.4
 pathspec==0.8.1
+pkginfo==1.6.1
+Pygments==2.7.3
+pyparsing==2.4.7
+readme-renderer==28.0
 regex==2020.11.13
+requests==2.25.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
+six==1.15.0
 toml==0.10.2
+tqdm==4.54.1
+twine==3.2.0
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 Unidecode==1.1.1
+urllib3==1.26.2
+webencodings==0.5.1
