--- a/.github/workflows/lint-test-coverage.yml
+++ b/.github/workflows/lint-test-coverage.yml
@@ -7,6 +7,7 @@ env:
 
 jobs:
   linting:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout the commit
         uses: actions/checkout@v1
