--- a/.github/workflows/lint-test-coverage.yml
+++ b/.github/workflows/lint-test-coverage.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install black
-      - name: Python unit tests
+      - name: Python linting
         run: |
           black .
   unit-tests:
