--- a/.github/workflows/lint-test-coverage.yml
+++ b/.github/workflows/lint-test-coverage.yml
@@ -2,7 +2,7 @@ name: linting-test-coverage
 on: [pull_request_target]
 
 env:
-  PYTHON_VER: "3.10"
+  PYTHON_VER: "3.11"
   DEEPSOURCE_DSN: ${{ secrets.DEEPSOURCE_DSN }}
 
 jobs:
@@ -20,11 +20,11 @@ jobs:
           python-version: ${{ env.PYTHON_VER }}
       - name: Install black
         run: |
-          python -m pip install --upgrade pip
-          pip install black
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
       - name: Python linting
         run: |
-          black .
+          poetry run black .
   unit-tests:
     runs-on: ubuntu-latest
     steps:
@@ -39,12 +39,12 @@ jobs:
           python-version: ${{ env.PYTHON_VER }}
       - name: Install dependancies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
       - name: Python unit tests
         run: |
-          coverage run -m unittest
-          coverage xml
+          poetry run coverage run -m unittest
+          poetry run coverage xml
       - name: Test coverage to deepsource.io
         run: |
           curl https://deepsource.io/cli | sh
